交接文档 §6.10: 07-06 经验沉淀(ModuleEntry 无 _exports/包级导出/PackageEntry 旗帜与名单/--add-exports 链路/can_read 特例/检查在 Java 层)